<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        style="@style/LabelStyle"
        android:text="@string/labelQuantity" />

    <Button
        style="@style/ValueButtonStyle"
        android:layout_marginTop="16dp"
        android:onClick="increment"
        android:text="@string/buttonIncrement"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/quantity_text_view"
        style="@style/EntryStyle"
        android:text="@string/defaultQuantity" />

    <Button
        style="@style/ValueButtonStyle"
        android:layout_marginBottom="16dp"
        android:onClick="decrement"
        android:text="@string/buttonDecrement"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        style="@style/LabelStyle"
        android:text="@string/labelPrice" />

    <TextView
        android:id="@+id/price_text_view"
        style="@style/EntryStyle"
        android:layout_marginVertical="16dp"
        android:text="@string/defaultPrice" />

    <Button
        style="@style/BasicView"
        android:onClick="submitOrder"
        android:text="@string/buttonOrder"
        tools:ignore="UsingOnClickInXml" />
</LinearLayout>